SERVER-20641 Equality query on _id with sort now works on mongos